# nixos

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  nilla.nix
modules/: nixos.nix
nixos-cli-def/: Cargo.toml
nixos-cli-def/src/: lib.rs
nixos-cli-def/src/commands/: build.rs  completions.rs  mod.rs  switch.rs  test.rs
npins/: sources.json
src/: main.rs
src/commands/: build.rs  mod.rs  switch.rs  test.rs
src/util/: errors.rs  git.rs  mod.rs  nix.rs  project.rs  search.rs
