[package]
name = "nilla-nixos"
version = "0.0.0"
edition = "2024"
repository = "https://github.com/nilla-nix/nixos"

[dependencies]
nixos-cli-def = { version = "0.0.0", path = "./nixos-cli-def" }
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
log = "0.4.26"
tokio = { version = "1.44.1", features = ["macros", "process", "rt-multi-thread"] }
url = "2.5.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
cargo-util = "0.2.18"
regex = "1.11.1"
once_cell = "1.21.1"
lazy_static = "1.5.0"
fern = { version = "0.7.1", features = ["colored"] }
colored = "3.0.0"
prettytable-rs = "0.10.0"
gethostname = "1.0.1"
which = "7.0.2"

[build-dependencies]
nixos-cli-def = { version = "0.0.0", path = "./nixos-cli-def" }
clap = { version = "4.5.32", features = ["derive"] }
clap_mangen = "0.2.26"
